[package]
name = "mdrc-pacbot-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.4.3"
num_enum = "0.7.0"
protobuf = "2"
rapier2d = "0.17.2"

[build-dependencies]
protoc-rust = "2.28.0"
