[package]
name = "mdrc-pacbot-util"
version = "0.1.0"
edition = "2021"
documentation = "https://rit-mdrc.github.io/mdrc-pacbot-util/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.24.1", default-features = false, features = [ "accesskit", "default_fonts", "glow", "wayland", "web_screen_reader", "x11" ] }
bevy = "0.12.1"
bevy_egui = "0.24.0"